welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:9: error: type mismatch;
 found   : Unit
 required: Boolean
		}else{
                     ^